--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @font-face {
     font-family: 'Avigea';
-    src: url('https://stefanh-98.github.io/my-fonts/Avigea.otf') format('opentype');
+    src: url('https://stefanh-98.github.io/my-fonts/Avigea.otf') format('opentype'),
+         url('https://stefanh-98.github.io/my-fonts/Avigea.woff2') format('woff2'),
+         url('https://stefanh-98.github.io/my-fonts/Avigea.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
